--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.17",
+    "@prisma/client": "^5.7.1",
+    "@types/multer": "^1.4.11",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
+    "prisma": "^5.7.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0"
