--- a/package.json
+++ b/package.json
@@ -28,16 +28,19 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.1.17",
     "@prisma/client": "^5.7.1",
-    "@types/multer": "^1.4.11",
     "@types/bcrypt": "^5.0.2",
+    "@types/multer": "^1.4.11",
     "bcrypt": "^5.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^3.2.0",
+    "debug": "^4.3.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
     "prisma": "^5.7.1",
     "reflect-metadata": "^0.1.13",
+    "run": "^1.5.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.0",
     "zod": "^3.22.4"
